<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_SRS" Id="{f2b98bd4-51ed-4216-ab90-64f1aff7498a}">
    <Declaration><![CDATA[(*
  Data entry of a software requirement
*)
TYPE ST_SRS :
STRUCT
  bImplemented  : BOOL;           // requirement implemented
  sKey          : STRING;         // requirement key
  sDescription  : T_MaxString;    // longer description (what, why, how)
  sLink         : T_MaxString;    // link to external description
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>