<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_SRS" Id="{f196b89b-aa46-4ad1-8386-42e56422aa0c}" SpecialFunc="None">
    <Declaration><![CDATA[(*
  Managing software requirements
*)
FUNCTION_BLOCK FB_SRS
VAR
  nSrsCt   : UDINT := 0;
  sSrsList : ARRAY[1..100] OF ST_SRS :=  // (software) requirements list
  [
    (bImplemented:=TRUE, skey:='first srs', sDescription:='first detail', sLink:='https://polytype.atlassian.net/browse/STWE-71')    
  ];
  
  bInit : BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
  Show a list of implemented SRS software/machine requirements. 
  Best linked to JIRA-Tiuckets, OPL or Steinmann Smartsheet entries.
*)

IF NOT bInit THEN
  bInit := TRUE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_SRS">
      <LineId Id="9" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>